[workspace]
members = [
    "bin/*",
]
resolver = "2"
license = "MIT"

[workspace.dependencies]
borsh = { version = "^1.5", features = ["derive"] }
yellowstone-grpc-client = { version = "1.15.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
yellowstone-grpc-proto = { version = "1.14.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
solana-program = "1.17.0"
solana-client = "1.17.0"
solana-account-decoder = "1.17.0"
solana-sdk = "1.17.0"
reqwest = { version = "0.11", features = ["json"] }
spl-associated-token-account = "2.3.0"
base64 = "0.22.1"
anchor-lang = "0.29.0"

anchor-spl = "0.29.0"
anchor-client = "0.29.0"
spl-token-2022 = "0.9.0"
spl-token = "4.0.0"
uint = "0.9.5"
anyhow = "1.0.75"
arrayref = "0.3.7"
bytemuck = "^1.16"
chrono = "0.4"
async-trait = "0.1.88"
tokio = "1.44.1"
base58 = "0.2.0"
futures-util = "0.3.30"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
dashmap = "6.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12.10", features = ["sync"] }
bincode = "1.3.3"

burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "8bdb3cadf18e9be01622f9acbe562ee2d4f65ac2", default-features = false }
eyre = "0.6.12"
async-channel = "2.1"
