[workspace]
members = [
    "bin/*",
]
resolver = "2"
license = "MIT"

[workspace.dependencies]
#borsh = { version = "^1.5", features = ["derive"] }
#solana-derivation-path = "2.2.1"
#yellowstone-grpc-proto = "6.0.0"
#yellowstone-grpc-client = "6.0.0"
#spl-token-2022 = "6.0.0"
#
##yellowstone-grpc-client = { version = "1.15.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
##yellowstone-grpc-proto = { version = "1.14.0", git = "https://github.com/blockworks-foundation/yellowstone-grpc.git", tag = "v1.15.0+solana.1.18" }
#solana-program = "2.2.1"
#solana-client = "2.2.7"
#solana-account-decoder = "2.2.7"
#solana-sdk = "2.2.2"
#reqwest = { version = "0.12.15", features = ["json"] }
#spl-associated-token-account = "6.0.0"
#base64 = "0.22.1"
#anchor-lang = "0.29.0"
#
#anchor-spl = "0.29.0"
#anchor-client = "0.29.0"
#
#spl-token = "8.0.0"
#uint = "0.9.5"
#anyhow = "1.0.75"
#arrayref = "0.3.7"
#bytemuck = "^1.16"
#chrono = "0.4"
#async-trait = "0.1.88"
#tokio = "1.44.1"
#base58 = "0.2.0"
#futures-util = "0.3.30"
#
#tracing = "0.1.41"
#tracing-subscriber = "0.3.19"
#tracing-appender = "0.2.3"
#dashmap = "6.1.0"
#
#moka = { version = "0.12.10", features = ["sync"] }
#
#burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "8bdb3cadf18e9be01622f9acbe562ee2d4f65ac2", default-features = false }
#eyre = "0.6.12"
#async-channel = "2.1"

[profile.bench]
debug = true
opt-level = 3 # 启用优化

[profile.release]
opt-level = 3            # 最高优化
lto = "fat"              # 全程序链接时优化
codegen-units = 1        # 单线程生成代码，优化一致性
panic = "abort"          # panic 时直接终止，提高速度
incremental = false      # 禁用增量编译，确保完整优化
debug = false            # 禁用调试信息
strip = "symbols"        # 去除符号表，减小体积（需要 Rust 1.60