[package]
name = "dex"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.88"
tokio = { workspace = true }
chrono = { workspace = true }
log = "0.4.27"

yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tonic = "0.12.1"
