[package]
name = "dex"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.88"
tokio = { workspace = true }
chrono = { workspace = true }
tracing={workspace = true}
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tonic = "0.12.1"
arrayref = { workspace = true }
