[package]
name = "dex"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.88"
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tonic = "0.12.1"
arrayref = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

dashmap = { workspace = true }

thiserror = "1.0.51"
num-traits = "0.2.19"
num-derive = "0.3.3"
uint = "0.9.5"
bytemuck = { workspace = true }
safe-transmute = "0.11.2"
