[package]
name = "meteora-dlmm"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
num-integer = "0.1.45"
log = "0.4.27"
arrayref = { workspace = true }
bincode = "1.3.3"

[dependencies.dex]
path = "../dex"
version = "0.0.1"

[dependencies.solana-sdk]
workspace = true

[dependencies.borsh]
features = ["derive"]
version = "^1.5"

[dependencies.bytemuck]
features = ["derive", "min_const_generics"]
version = "^1.16"

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.solana-program]
version = "1.18.26"

[dependencies.thiserror]
version = "^1.0"

[dependencies.anyhow]
workspace = true

[dependencies.anchor-client]
workspace = true

[dependencies.anchor-spl]
workspace = true

[dependencies.ruint]
version = "1.3.0"

[dependencies.spl-transfer-hook-interface]
version = "0.5.0"
