[package]
name = "pump-fun"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
dex = { path = "../dex", version = "0.0.1" }
solana-program = {workspace = true}
solana-sdk = {workspace = true}
uint = "0.9.5"
log = "0.4.27"
anchor-lang = {workspace = true}
anchor-spl = {workspace = true}

[dev-dependencies]
solana-client = { workspace = true }