[package]
name = "pump-fun"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
dex = { path = "../dex", version = "0.0.1" }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-stream = "0.1.15"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
arrayref = { workspace = true }
base58 = { workspace = true }
tracing = { workspace = true }