[package]
name = "raydium-amm"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
dex = { path = "../dex", version = "0.0.1" }
solana-program = "<1.17.0"
solana-client = "1.16.18"
solana-sdk = "1.16.18"
uint = "0.9.5"
log = "0.4.27"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.75"
spl-token-2022 = "0.9.0"
arrayref = "0.3.7"