[package]
name = "raydium-amm"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
dex = { path = "../dex", version = "0.0.1" }

solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }

uint = "0.9.5"
arrayref = { workspace = true }
bytemuck = { workspace = true }
safe-transmute = "0.11.2"
num-derive = "0.3.3"
thiserror = "1.0.51"
num-traits = "0.2.19"
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tonic = "0.12.1"
spl-token = { workspace = true }
base58 = { workspace = true }
futures-util = {workspace = true}
tracing = { workspace = true }