[package]
name = "raydium-clmm"
version = "0.0.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
dex = { path = "../dex", version = "0.0.1" }
solana-program = {workspace = true}
solana-client = {workspace = true}
solana-sdk = {workspace = true}
uint = {workspace = true}
anchor-lang = {workspace = true}
anchor-spl = {workspace = true}
anyhow = {workspace = true}
spl-token-2022 = {workspace = true}
arrayref = {workspace = true}
async-trait = {workspace = true}